--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: "^1.0.0"
+  cloud_firestore: "^1.0.0"
 
 
   # The following adds the Cupertino Icons font to your application.
