--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,13 +18,16 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: "^1.0.0"
-  cloud_firestore: "^1.0.0"
+  firebase_core: ^1.0.2
+  cloud_firestore: ^1.0.2
+  url_launcher: ^6.0.2
+  badges: ^1.2.0
+  drop_cap_text: ^1.0.7
 
 
   # The following adds the Cupertino Icons font to your application.
