--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>569669155103-tt8eqpo84h0opf9l7vp0fv58k0fke03m.apps.googleusercontent.com</string>
+	<string>793182217084-rjf1uhtq6j52hrqjdqq5h1s548octbs9.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.569669155103-tt8eqpo84h0opf9l7vp0fv58k0fke03m</string>
+	<string>com.googleusercontent.apps.793182217084-rjf1uhtq6j52hrqjdqq5h1s548octbs9</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAHWXZtZ_PQeeZHmbHQDJY7OKUsrGrwc98</string>
+	<string>AIzaSyBo9XFT0H-GXz0ZIHTVyTECo9dJqZRgmCw</string>
 	<key>GCM_SENDER_ID</key>
-	<string>569669155103</string>
+	<string>793182217084</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>frases</string>
+	<string>com.realzero.frases</string>
 	<key>PROJECT_ID</key>
-	<string>frases-c03a6</string>
+	<string>frases-2e227</string>
 	<key>STORAGE_BUCKET</key>
-	<string>frases-c03a6.appspot.com</string>
+	<string>frases-2e227.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:569669155103:ios:b786055fb17ac37856582a</string>
-	<key>DATABASE_URL</key>
-	<string>https://frases-c03a6.firebaseio.com</string>
+	<string>1:793182217084:ios:cb6e8a5c827eb14ba4faf9</string>
 </dict>
 </plist>
