--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_analytics: ^7.1.1
   firebase_core: ^1.0.2
   cloud_firestore: ^1.0.2
-  url_launcher: ^6.0.2
   badges: ^1.2.0
   drop_cap_text: ^1.0.7
+  url_launcher: ^6.0.3
+  firebase_messaging: ^9.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
