--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   drop_cap_text: ^1.0.7
   url_launcher: ^6.0.3
   firebase_messaging: ^9.1.0
+  overlay_support: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
