--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.frases">
+    package="com.realzero.frases">
    <application
         android:label="Motivacionapp"
         android:icon="@mipmap/launcher_icon">
